=======
CHANGES
=======

0.10.0 (unreleased)
------------------

- Use a batch factory instead of instantiating ``z3c.batching.Batch`` class directly,
  (``z3c.batching.Batch`` registered as default factory in ``z3c.batching==1.2.0``)

- ``IValues`` conform to ``len`` protocol. ``table.Table`` has new
  ``allRowsCount`` attribute that surfaces the total number of rows.

- ``table.Table`` modified to use the new ``IValues`` attributes.

- ``IValues`` has two new attributes: ``isSorted`` and ``sortOn``.  
  They can be queried by tables to avoid to sort again when values where 
  initially sorted (for example, values coming from a sorted SQL query). 

- Add tests that verify interfaces for classes in ``value.py``


0.9.0 (2010-08-09)
------------------

- Added ``EMailColumn`` which can be used to display mailto links.

- Fixed the default BatchProvider not to lose table sorting query arguments
  from the generated links; now batching and sorting play with each other
  nicely.

- Split single doctest file (README.txt) into different files


0.8.1 (2010-07-31)
------------------

- Added translation for the link title in the column header of the
  sortable table.


0.8.0 (2009-12-29)
------------------

- Added translation for ``LinkColumn.linkContent``.

- Added ``I18nGetAttrColumn`` which translates its content.


0.7.0 (2009-12-29)
------------------

- Allow to initialze the column definitions without requiring an
  entire table update.

- Fixed tests, so they no longer use ``zope.app.container`` (which was
  even not declared as test dependency).

- Head cell contents are now translated.

0.6.1 (2009-02-22)
------------------

- Be smart to not ``IPhysicallyLocatable`` objects if we lookup the
  ``__name__`` value in columns.


0.6.0 (2008-11-12)
------------------

- Bugfix: Allow to switch the sort order on the header link. This was
  blocked to descending after the first click

- Bugfix: CheckBoxColumn, ensure that we allways use a list for compare